cmake_minimum_required(VERSION 3.23)
project(baekjoon)

set(CMAKE_CXX_STANDARD 17)

add_executable(baekjoon main.cpp 5430.cpp 14500.cpp 13549.cpp)
add_executable(5430 5430.cpp)
add_executable(14500 14500.cpp)
add_executable(13549 13549.cpp)
add_executable(12851 12851.cpp)
add_executable(1753 1753.cpp)
add_executable(9251 9251.cpp)
add_executable(1865 1865.cpp)
add_executable(11657 11657.cpp)
add_executable(1918 1918.cpp)
add_executable(2263 2263.cpp)
add_executable(2206 2206.cpp)
add_executable(11444 11444.cpp)
add_executable(9465 9465.cpp)
add_executable(10830 10830.cpp)
add_executable(9663 9663.cpp)
add_executable(11725 11725.cpp)
add_executable(1932 1932.cpp)
add_executable(11660 11660.cpp)
add_executable(1967 1967.cpp)
add_executable(1167 1167.cpp)